# streamlit-ollama-playground

./: .env  .env.example  .gitignore  Dockerfile  Makefile  README.md  compose.yml  models.txt  pyproject.toml  streamlit_app.py
.devcontainer/: devcontainer.json
.github/workflows/: python.yaml
.streamlit/: config.toml
pages/: 1_Chromadb_embedding.py  1_Ollama_embeddings.py  1_embedding_demo.py  2_LlamaIndex.py  2_LlamaIndex_chatbot.py  3_LangChain.py  3_LangChain_LLM_app.py  4_Expert_Programmer_Prompt.py  4_Summerize_file_contents.py  5_Basic_RAG_app.py  6_PGvector_RAG.py  7_OL_AI_Agent.py
prompts/: ExpertProgrammer.py
