[project]
name = "streamlit-ollama-rag-apps"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=0.6.2",
    "langchain-ollama>=0.2.2",
    "llama-index-llms-ollama>=0.5.0",
    "ollama>=0.4.5",
    "streamlit>=1.41.1",
]
