[project]
name = "streamlit-ollama-rag-apps"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "chromadb>=0.6.2",
    "langchain>=0.3.14",
    "langchain-community>=0.3.14",
    "langchain-core>=0.3.30",
    "langchain-ollama>=0.2.2",
    "langchain-text-splitters>=0.3.5",
    "langgraph>=0.2.66",
    "llama-index-llms-ollama>=0.5.0",
    "ollama>=0.4.5",
    "streamlit>=1.41.1",
    "transformers>=4.48.1",
]
