[project]
name = "streamlit-ollama-rag-apps"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "chromadb>=0.6.2",
    "langchain>=0.3.14",
    "langchain-community>=0.3.14",
    "langchain-core>=0.3.30",
    "langchain-ollama>=0.2.2",
    "langchain-text-splitters>=0.3.5",
    "langgraph>=0.2.66",
    "llama-index-llms-ollama>=0.5.0",
    "ollama>=0.4.5",
    "pgvector>=0.3.6",
    "psycopg[binary]>=3.2.4",
    "pydantic>=2.10.5",
    "pydantic-settings>=2.7.1",
    "streamlit>=1.41.1",
    "streamlit-pydantic>=0.6.0",
    "transformers>=4.48.1",
]

[tool.ruff]
exclude = [".git", ".vscode", ".pytest_cache", ".mypy_cache", ".env"]
line-length = 88

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-mock>=3.14.0",
]
